--- a/.github/workflows/nextflow-export.yml
+++ b/.github/workflows/nextflow-export.yml
@@ -29,14 +29,25 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.21'
+          go-version: '1.24'
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: Setup Nextflow
-        uses: nf-core/setup-nextflow@v2
-
-      - name: Install Cauldron CLI
         run: |
-          go install github.com/noatgnu/cauldron-go/cmd/plugin-to-nextflow@latest
+          curl -s https://get.nextflow.io | bash
+          sudo mv nextflow /usr/local/bin/
+          nextflow -version
+
+      - name: Build Cauldron CLI
+        run: |
+          git clone https://github.com/noatgnu/cauldron-go.git /tmp/cauldron-go
+          cd /tmp/cauldron-go
+          go build -o /usr/local/bin/plugin-to-nextflow ./cmd/plugin-to-nextflow
 
       - name: Generate Nextflow Pipeline
         run: |
@@ -56,14 +67,25 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.21'
+          go-version: '1.24'
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: Setup Nextflow
-        uses: nf-core/setup-nextflow@v2
-
-      - name: Install Cauldron CLI
         run: |
-          go install github.com/noatgnu/cauldron-go/cmd/plugin-to-nextflow@latest
+          curl -s https://get.nextflow.io | bash
+          sudo mv nextflow /usr/local/bin/
+          nextflow -version
+
+      - name: Build Cauldron CLI
+        run: |
+          git clone https://github.com/noatgnu/cauldron-go.git /tmp/cauldron-go
+          cd /tmp/cauldron-go
+          go build -o /usr/local/bin/plugin-to-nextflow ./cmd/plugin-to-nextflow
 
       - name: Generate Nextflow Pipeline
         run: |
@@ -86,16 +108,16 @@ jobs:
       - name: Run Nextflow with Examples
         run: |
           nextflow run main.nf \
-          --selection_metric 'rmse' \
-          --create_overlay 'false' \
-          --compound_col 'Compound' \
           --concentration_col 'Conc' \
           --response_col 'Rab10' \
           --enable_custom_models 'true' \
-          --show_ic50_lines 'true' \
           --show_dmax_lines 'true' \
+          --selection_metric 'rmse' \
+          --show_ic50_lines 'true' \
           --file_format 'svg' \
+          --create_overlay 'false' \
           --input_file examples/dose_response/example_data.csv \
+          --compound_col 'Compound' \
           -profile docker \
           --outdir results
 
@@ -112,11 +134,13 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.21'
+          go-version: '1.24'
 
-      - name: Install Cauldron CLI
+      - name: Build Cauldron CLI
         run: |
-          go install github.com/noatgnu/cauldron-go/cmd/plugin-to-nextflow@latest
+          git clone https://github.com/noatgnu/cauldron-go.git /tmp/cauldron-go
+          cd /tmp/cauldron-go
+          go build -o /usr/local/bin/plugin-to-nextflow ./cmd/plugin-to-nextflow
 
       - name: Generate Nextflow Pipeline
         run: |
